--- a/quick-order-angular/angular.json
+++ b/quick-order-angular/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "quick-order": {
+    "quick-order-angular": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/quick-order",
+            "outputPath": "dist/quick-order-angular",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -62,10 +62,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "quick-order:build:production"
+              "buildTarget": "quick-order-angular:build:production"
             },
             "development": {
-              "buildTarget": "quick-order:build:development"
+              "buildTarget": "quick-order-angular:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -73,7 +73,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "quick-order:build"
+            "buildTarget": "quick-order-angular:build"
           }
         },
         "test": {
