--- a/quick-order-angular/package.json
+++ b/quick-order-angular/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quick-order",
+  "name": "quick-order-angular",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:quick-order": "node dist/quick-order/server/server.mjs"
+    "serve:ssr:quick-order-angular": "node dist/quick-order-angular/server/server.mjs"
   },
   "private": true,
   "dependencies": {
